fixed authentication flow, added authorization on method level